stmMX/.metadata/.plugins/org.eclipse.cdt.ui/temp1.build.log
12:40:55 **** Incremental Build of configuration Debug for project temp1 ****
make -j16 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m7 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F767xx -c -I../Core/Inc -I../Drivers/STM32F7xx_HAL_Driver/Inc -I../Drivers/STM32F7xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F7xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfpu=fpv5-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main.o"
../Core/Src/main.c: In function 'main':
../Core/Src/main.c:119:11: warning: implicit declaration of function 'printf' [-Wimplicit-function-declaration]
  119 |           printf("Temperature: %.2f C\r\n", temperature);
      |           ^~~~~~
../Core/Src/main.c:21:1: note: include '<stdio.h>' or provide a declaration of 'printf'
   20 | #include "main.h"
  +++ |+#include <stdio.h>
   21 | 
../Core/Src/main.c:119:11: warning: incompatible implicit declaration of built-in function 'printf' [-Wbuiltin-declaration-mismatch]
  119 |           printf("Temperature: %.2f C\r\n", temperature);
      |           ^~~~~~
../Core/Src/main.c:119:11: note: include '<stdio.h>' or provide a declaration of 'printf'
../Core/Src/main.c:121:53: warning: implicit declaration of function 'strlen' [-Wimplicit-function-declaration]
  121 |           HAL_UART_Transmit(&huart2, (uint8_t*)msg, strlen(msg), HAL_MAX_DELAY);
      |                                                     ^~~~~~
../Core/Src/main.c:21:1: note: include '<string.h>' or provide a declaration of 'strlen'
   20 | #include "main.h"
  +++ |+#include <string.h>
   21 | 
../Core/Src/main.c:121:53: warning: incompatible implicit declaration of built-in function 'strlen' [-Wbuiltin-declaration-mismatch]
  121 |           HAL_UART_Transmit(&huart2, (uint8_t*)msg, strlen(msg), HAL_MAX_DELAY);
      |                                                     ^~~~~~
../Core/Src/main.c:121:53: note: include '<string.h>' or provide a declaration of 'strlen'
../Core/Src/main.c:189:13: error: invalid storage class for function 'MX_ADC1_Init'
  189 | static void MX_ADC1_Init(void)
      |             ^~~~~~~~~~~~
../Core/Src/main.c:241:13: error: invalid storage class for function 'MX_USART2_UART_Init'
  241 | static void MX_USART2_UART_Init(void)
      |             ^~~~~~~~~~~~~~~~~~~
../Core/Src/main.c:276:13: error: invalid storage class for function 'MX_USART3_UART_Init'
  276 | static void MX_USART3_UART_Init(void)
      |             ^~~~~~~~~~~~~~~~~~~
../Core/Src/main.c:311:13: error: invalid storage class for function 'MX_USB_OTG_FS_PCD_Init'
  311 | static void MX_USB_OTG_FS_PCD_Init(void)
      |             ^~~~~~~~~~~~~~~~~~~~~~
../Core/Src/main.c:346:13: error: invalid storage class for function 'MX_GPIO_Init'
  346 | static void MX_GPIO_Init(void)
      |             ^~~~~~~~~~~~
../Core/Src/main.c:447:1: error: expected declaration or statement at end of input
  447 | }
      | ^
../Core/Src/main.c: At top level:
../Core/Src/main.c:56:13: warning: 'MX_GPIO_Init' used but never defined
   56 | static void MX_GPIO_Init(void);
      |             ^~~~~~~~~~~~
../Core/Src/main.c:57:13: warning: 'MX_USART3_UART_Init' used but never defined
   57 | static void MX_USART3_UART_Init(void);
      |             ^~~~~~~~~~~~~~~~~~~
../Core/Src/main.c:58:13: warning: 'MX_USB_OTG_FS_PCD_Init' used but never defined
   58 | static void MX_USB_OTG_FS_PCD_Init(void);
      |             ^~~~~~~~~~~~~~~~~~~~~~
../Core/Src/main.c:59:13: warning: 'MX_ADC1_Init' used but never defined
   59 | static void MX_ADC1_Init(void);
      |             ^~~~~~~~~~~~
../Core/Src/main.c:60:13: warning: 'MX_USART2_UART_Init' used but never defined
   60 | static void MX_USART2_UART_Init(void);
      |             ^~~~~~~~~~~~~~~~~~~
../Core/Src/main.c:438:6: warning: 'Error_Handler' defined but not used [-Wunused-function]
  438 | void Error_Handler(void)
      |      ^~~~~~~~~~~~~
../Core/Src/main.c:346:13: warning: 'MX_GPIO_Init' defined but not used [-Wunused-function]
  346 | static void MX_GPIO_Init(void)
      |             ^~~~~~~~~~~~
../Core/Src/main.c:311:13: warning: 'MX_USB_OTG_FS_PCD_Init' defined but not used [-Wunused-function]
  311 | static void MX_USB_OTG_FS_PCD_Init(void)
      |             ^~~~~~~~~~~~~~~~~~~~~~
../Core/Src/main.c:276:13: warning: 'MX_USART3_UART_Init' defined but not used [-Wunused-function]
  276 | static void MX_USART3_UART_Init(void)
      |             ^~~~~~~~~~~~~~~~~~~
../Core/Src/main.c:241:13: warning: 'MX_USART2_UART_Init' defined but not used [-Wunused-function]
  241 | static void MX_USART2_UART_Init(void)
      |             ^~~~~~~~~~~~~~~~~~~
../Core/Src/main.c:189:13: warning: 'MX_ADC1_Init' defined but not used [-Wunused-function]
  189 | static void MX_ADC1_Init(void)
      |             ^~~~~~~~~~~~
../Core/Src/main.c:131:6: warning: 'SystemClock_Config' defined but not used [-Wunused-function]
  131 | void SystemClock_Config(void)
      |      ^~~~~~~~~~~~~~~~~~
make: *** [Core/Src/subdir.mk:34: Core/Src/main.o] Error 1
"make -j16 all" terminated with exit code 2. Build might be incomplete.

12:40:56 Build Failed. 7 errors, 16 warnings. (took 613ms)

